syntax = "proto3";
package basicblog.post;

service Post {

  rpc New (NewCommand) returns (NewResponse) {}
  rpc Delete (DeleteCommand) returns (DeleteResponse) {}
  rpc Restore (RestoreCommand) returns (RestoreResponse) {}
  rpc Edit (EditCommand) returns (EditResponse) {}
  
  rpc List (ListQuery) returns (ListResponse) {}
  rpc View (ViewQuery) returns (ViewResponse) {}
}

message NewCommand {
  string title = 1;
  string body = 2;
}

message NewResponse {
  int32 id = 1;
}

message DeleteCommand {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
}

message RestoreCommand {
  int32 id = 1;
}

message RestoreResponse {
  bool success = 1;
}

message EditCommand {
  int32 id = 1;
  string title = 2;
  string body = 3;
}

message EditResponse {
  bool success = 1;
}

message ListQuery {
  bool includeDeleted = 1;
}

message ListResponse {
  repeated ViewResponse posts = 1;
}

message ViewQuery {
  int32 id = 1;
  bool includeDeleted = 2;
}

message ViewResponse {
  int32 id = 1;
  string title = 2;
  string body = 3;
  string author = 4;
  int64 createdTime = 5;
  bool deleted = 6;
}